--- a/blackdoves.html
+++ b/blackdoves.html
@@ -27,8 +27,8 @@ limitations under the License.
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-<meta name="amp-consent-blocking" content="amp-ad">
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
 
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -2333,7 +2333,8 @@ limitations under the License.
   </style>
 </head>
 
-<body><div>
+<body>
+  <div>
     <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
       <script type="application/json">
           {
@@ -2343,7 +2344,8 @@ limitations under the License.
               "params": ""
             }
           }
-        </script></div>
+        </script>
+  </div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
@@ -2513,9 +2515,13 @@ limitations under the License.
 
   <!-- Start Footer -->
   <footer class="ampstart-footer flex flex-column items-center px3 ">
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div>
 
-
-    <small>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
