--- a/fengshui2025.html
+++ b/fengshui2025.html
@@ -25,10 +25,10 @@ limitations under the License.
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
-<meta name="amp-script-src" content="sha384-wnGWW1OAyIEwfkA54x3x3syqP2BHDMPk2Xd5Lpw_fgtFy9FNTGla2QIl18v40IUy">
+  <meta name="amp-script-src" content="sha384-wnGWW1OAyIEwfkA54x3x3syqP2BHDMPk2Xd5Lpw_fgtFy9FNTGla2QIl18v40IUy">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-<meta name="amp-consent-blocking" content="amp-ad">
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
 
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -2333,7 +2333,8 @@ limitations under the License.
   </style>
 </head>
 
-<body><div>
+<body>
+  <div>
     <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
       <script type="application/json">
           {
@@ -2343,7 +2344,8 @@ limitations under the License.
               "params": ""
             }
           }
-        </script></div>
+        </script>
+  </div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
@@ -2354,8 +2356,8 @@ limitations under the License.
     </script>
   </amp-script>
   <!--maybe delete above-->
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
+  <amp-analytics type="googleanalytics">
+    <script type="application/json">
       {
         "vars": {
           "account": "G-V3TNNSX3H4"
@@ -2368,7 +2370,7 @@ limitations under the License.
         }
       }
     </script>
-</amp-analytics>
+  </amp-analytics>
 
 
   <!-- Start Navbar -->
@@ -2433,107 +2435,128 @@ limitations under the License.
   <main id="content" role="main">
     <article class="px3">
       <h2 id="story" class="my4 theme2-anchored">2025 Feng Shui</h2>
-        <amp-youtube data-videoid="bMX1LKnbSkY" layout="responsive" width="480" height="270"></amp-youtube>
-      <p class="mb1 ampstart-dropcap"> Feng Shui for 2025: Navigating the Year of the Wood Snake. As we step into 2025, the Flying Star chart brings a mix
-      of opportunities and challenges for our homes and lives. This year is the Year of the Wood Snake in the Chinese zodiac,
-      symbolizing transformation and wisdom.  This year is all about adaptability and adjustments.  Let’s explore how traditional elements and Flying Star energies
-      interplay, guiding us to a balanced and prosperous year.
+      <amp-youtube data-videoid="bMX1LKnbSkY" layout="responsive" width="480" height="270"></amp-youtube>
+      <p class="mb1 ampstart-dropcap"> Feng Shui for 2025: Navigating the Year of the Wood Snake. As we step into 2025,
+        the Flying Star chart brings a mix
+        of opportunities and challenges for our homes and lives. This year is the Year of the Wood Snake in the Chinese
+        zodiac,
+        symbolizing transformation and wisdom. This year is all about adaptability and adjustments. Let’s explore how
+        traditional elements and Flying Star energies
+        interplay, guiding us to a balanced and prosperous year.
       </p>
 
       <p class="mb1">
         Traditional Elements and the 2025 Flying Star Map
-        In Feng Shui, the natural elements of wood, fire, earth, metal, and water are associated with specific directions,
+        In Feng Shui, the natural elements of wood, fire, earth, metal, and water are associated with specific
+        directions,
         forming a foundation for energy flow. Here’s how they align with the 2025 Flying Star map:
       </p>
 
       <p class="mb1">
         Southeast (Wood): 1
-        White (Wisdom Star) symbolizes clarity and career growth. The wood element fosters vitality and fresh opportunities.
+        White (Wisdom Star) symbolizes clarity and career growth. The wood element fosters vitality and fresh
+        opportunities.
         However, Tai Sui resides here, so avoid loud activities or renovations.
       </p>
 
       <p class="mb1">South (Fire): Hosting 6 White (Heavenly
-      Star), the south signifies success and blessings. The fire element enhances this energy, making it an area of
-      transformation and optimism.
+        Star), the south signifies success and blessings. The fire element enhances this energy, making it an area of
+        transformation and optimism.
       </p>
       <p class="mb1"><a href="https://www.kqzyfj.com/click-101316119-11430556">
           <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea"
             border="0" /></a>
       </p>
       <p class="mb1">Southwest (Earth): 8 White (Prosperity Star) resides here, representing wealth
-      and stability. Earth energy supports grounding and abundance.</p>
+        and stability. Earth energy supports grounding and abundance.</p>
       <p class="mb1">East (Wood): With 9 Purple (Future Prosperity
-      Star), the east encourages celebration and long-term growth. Wood energy strengthens this dynamic. </p><p class="mb1">Center
-      (Earth): The 2 Black (Illness Star) dominates the center. Earth energy here requires mitigation with metal to
-      neutralize its effects. </p>
+        Star), the east encourages celebration and long-term growth. Wood energy strengthens this dynamic. </p>
+      <p class="mb1">Center
+        (Earth): The 2 Black (Illness Star) dominates the center. Earth energy here requires mitigation with metal to
+        neutralize its effects. </p>
 
       <p class="mb1">West (Metal): 4 Green (Academic Star) brings creativity and learning. Metal energy in
-      the west balances this intellectual influence. </p>
+        the west balances this intellectual influence. </p>
       <p class="mb1">Northeast (Earth): 5 Yellow (Misfortune Star) demands caution.
-      Earth energy is heavy here, and remedies like metal are essential to deflect negativity. </p>
+        Earth energy is heavy here, and remedies like metal are essential to deflect negativity. </p>
       <p class="mb1">North (Water): Hosting
-      7 Red (Violence Star), the north’s water energy may face instability. Balance this with calming elements. </p>
-      <p class="mb1">Northwest (Metal): The 3 Jade (Quarrelsome Star) requires care to avoid conflicts. Metal’s strength helps
-      stabilize this sector. </p>
+        7 Red (Violence Star), the north’s water energy may face instability. Balance this with calming elements. </p>
+      <p class="mb1">Northwest (Metal): The 3 Jade (Quarrelsome Star) requires care to avoid conflicts. Metal’s strength
+        helps
+        stabilize this sector. </p>
       <p class="mb1">Understanding this interplay of elements helps us harmonize our environment to maximize 2025’s
-      potential. </p>
-      <amp-carousel width="450" height="300" layout="responsive" type="slides" role="region" aria-label="Basic carousel" style="background-color: #ff0;">
+        potential. </p>
+      <amp-carousel width="450" height="300" layout="responsive" type="slides" role="region" aria-label="Basic carousel"
+        style="background-color: #ff0;">
         <amp-img src="./img/fs2025/snake1.jpeg" width="450" height="300"></amp-img>
         <amp-img src="./img/fs2025/snake3.jpeg" width="450" height="300"></amp-img>
       </amp-carousel>
       <p class="mb1">Key Areas of Focus and Remedies # South Side: A Zone of Opportunity The south shines
-      brightly in 2025: </p>
+        brightly in 2025: </p>
       <p class="mb1">6 White (South): Symbolizing blessings and success, activate this area with fire elements like
-      red or purple accents. </p>
+        red or purple accents. </p>
       <p class="mb1">8 White (Southwest): Representing wealth, enhance this with earthy tones or crystals to
-      ground prosperity. </p>
+        ground prosperity. </p>
       <p class="mb1">1 White (Southeast): A wisdom star for career growth, foster it with water features or blue
-      decor. Be mindful of Tai Sui’s presence—respect and calm are key. </p>
+        decor. Be mindful of Tai Sui’s presence—respect and calm are key. </p>
       <p class="mb1">North Side: Challenges and Growth The north
-      side presents hurdles but also opportunities: </p>
+        side presents hurdles but also opportunities: </p>
       <p class="mb1">7 Red (North): Violence Star requires water elements like blue or
-      black accents to reduce instability. </p>
+        black accents to reduce instability. </p>
       <p class="mb1">3 Jade (Northwest): The Quarrelsome Star benefits from metal remedies like
-      silver objects or wind chimes to ease tension. </p>
+        silver objects or wind chimes to ease tension. </p>
       <p class="mb1">Center: Illness Star (2 Black) The center’s 2 Black demands
-      strategic adjustments: - Metal Elements: Introduce metal items (e.g., wind chimes, brass bowls) to weaken earth
-      energy. </p>
+        strategic adjustments: - Metal Elements: Introduce metal items (e.g., wind chimes, brass bowls) to weaken earth
+        energy. </p>
       <p class="mb1">Avoid Fire Elements: Fire strengthens earth, so avoid red decor or candles. </p>
       <p class="mb1">Minimal Activity:
-      Traditionally neutral, this area is best left undisturbed. </p>
+        Traditionally neutral, this area is best left undisturbed. </p>
       <p class="mb1">Respect Tai Sui in the Southeast Tai Sui’s presence
-      in the southeast requires respect. Avoid major renovations or loud activities in this area to maintain harmony. </p>
+        in the southeast requires respect. Avoid major renovations or loud activities in this area to maintain harmony.
+      </p>
       <p class="mb1">
-      Feng Shui and the Fluidity of Energy Modern quantum computing offers a fascinating parallel to Feng Shui. Just as
-      quantum systems defy the binary concept of 0 and 1 by existing in nuanced states, Feng Shui interprets the balance of
-      yin and yang as a spectrum rather than absolutes. Trigrams, combining various yin and yang lines, represent these
-      dynamic interactions, creating layers of meaning. This interplay mirrors how Flying Star Feng Shui integrates multiple
-      energies into a cohesive picture. For example, the presence of 4 yin lines and 2 yang lines in a trigram signifies a
-      nuanced dynamic, just as the stars in each direction bring both challenges and opportunities. Embracing these subtleties
-      allows us to harmonize our environments with greater precision. </p>
+        Feng Shui and the Fluidity of Energy Modern quantum computing offers a fascinating parallel to Feng Shui. Just
+        as
+        quantum systems defy the binary concept of 0 and 1 by existing in nuanced states, Feng Shui interprets the
+        balance of
+        yin and yang as a spectrum rather than absolutes. Trigrams, combining various yin and yang lines, represent
+        these
+        dynamic interactions, creating layers of meaning. This interplay mirrors how Flying Star Feng Shui integrates
+        multiple
+        energies into a cohesive picture. For example, the presence of 4 yin lines and 2 yang lines in a trigram
+        signifies a
+        nuanced dynamic, just as the stars in each direction bring both challenges and opportunities. Embracing these
+        subtleties
+        allows us to harmonize our environments with greater precision. </p>
       <p class="mb1">Incorporating Biochar into Feng Shui This
-      year, I’ve been incorporating biochar into my houseplants, offering a unique connection to Feng Shui’s elements: -
-      Wood and Fire: Biochar is made from wood through a heating process, embodying fire’s transformative energy. -
-      Earth and Water: As a finished product, biochar represents earth and supports water retention in soil, balancing
-      hydration. - Practical Benefits: Plants with biochar are resilient and align well with the stabilizing energy of
-      earth-related sectors like the southwest. Biochar not only enhances plant health but also subtly brings positive energy
-      into your home. </p>
+        year, I’ve been incorporating biochar into my houseplants, offering a unique connection to Feng Shui’s elements:
+        -
+        Wood and Fire: Biochar is made from wood through a heating process, embodying fire’s transformative energy. -
+        Earth and Water: As a finished product, biochar represents earth and supports water retention in soil, balancing
+        hydration. - Practical Benefits: Plants with biochar are resilient and align well with the stabilizing energy of
+        earth-related sectors like the southwest. Biochar not only enhances plant health but also subtly brings positive
+        energy
+        into your home. </p>
       <p class="mb1">Practical Tips for Maximizing 2025 1. Declutter Your Home: Start the year by clearing
-      stagnant energy. Donate or recycle items you no longer need. </p>
+        stagnant energy. Donate or recycle items you no longer need. </p>
       <p class="mb1">2. Decorate by Sector: Use the Flying Star map and
-      traditional elements to guide decor choices. Focus on enhancing the south side’s prosperity while neutralizing
-      challenges in the north. </p>
+        traditional elements to guide decor choices. Focus on enhancing the south side’s prosperity while neutralizing
+        challenges in the north. </p>
       <p class="mb1">3. Add Plants (with Biochar): Plants symbolize wood and growth. Incorporating biochar
-      improves their vitality and aligns with earth’s stabilizing energy. </p>
+        improves their vitality and aligns with earth’s stabilizing energy. </p>
       <p class="mb1">4. Embrace Metal: Metal is a key remedy for the
-      illness star in the center and challenging stars elsewhere. Simple additions like metal bowls or wind chimes can make a
-      difference. </p>
+        illness star in the center and challenging stars elsewhere. Simple additions like metal bowls or wind chimes can
+        make a
+        difference. </p>
       <p class="mb1">5. Respect Energy Flow: Keep pathways clear and ensure your home feels open and inviting. </p>
       <p class="mb1">
-      Final Thoughts: Renewal and Balance for 2025 The new year offers a chance to bring fresh energy into your life. By
-      understanding the Flying Star chart and incorporating remedies like metal accents, biochar, and thoughtful decor, you
-      can navigate challenges and embrace opportunities. Remember, even small adjustments can lead to big changes. Let’s make
-      2025 a year of transformation, wisdom, and harmony!
+        Final Thoughts: Renewal and Balance for 2025 The new year offers a chance to bring fresh energy into your life.
+        By
+        understanding the Flying Star chart and incorporating remedies like metal accents, biochar, and thoughtful
+        decor, you
+        can navigate challenges and embrace opportunities. Remember, even small adjustments can lead to big changes.
+        Let’s make
+        2025 a year of transformation, wisdom, and harmony!
       </p>
 
 
@@ -2546,8 +2569,10 @@ limitations under the License.
   <!-- Start Footer -->
   <footer class="ampstart-footer flex flex-column items-center px3 ">
 
-<div id="postPromptUI"></div>
-    <small>
+    <div id="postPromptUI"></div>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
