--- a/stories.amp.html
+++ b/stories.amp.html
@@ -26,8 +26,8 @@ limitations under the License.
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-<meta name="amp-consent-blocking" content="amp-ad">
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
 
   <style amp-boilerplate="">
     body {
@@ -3355,7 +3355,7 @@ limitations under the License.
 
 <body class="land-see">
   <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
+      <script type="application/json">
             {
               "postPromptUI": "postPromptUI",
               "clientConfig": {
@@ -3363,7 +3363,8 @@ limitations under the License.
                 "params": ""
               }
             }
-          </script></div>
+          </script>
+  </div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
      window.dataLayer = window.dataLayer || [];
@@ -3862,9 +3863,12 @@ limitations under the License.
       </li>
     </ul>
 
-    <small>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - •
-      <a class="text-decoration-none" href="https://www.cj.com/contact-us">Terms &amp; Conditions.  Site contains affiliate links</a>
+      <a class="text-decoration-none" href="https://www.cj.com/contact-us">Terms &amp; Conditions. Site contains
+        affiliate links</a>
     </small>
   </footer>
   <!-- End Footer -->
