--- a/2024.html
+++ b/2024.html
@@ -27,8 +27,8 @@ limitations under the License.
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-<meta name="amp-consent-blocking" content="amp-ad">
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
@@ -2334,7 +2334,7 @@ limitations under the License.
 
 <body>
   <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
+      <script type="application/json">
       {
         "postPromptUI": "postPromptUI",
         "clientConfig": {
@@ -2342,11 +2342,12 @@ limitations under the License.
           "params": ""
         }
       }
-    </script></div>
+    </script>
+  </div>
 
 
-<div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-  <script type="application/json">
+  <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+      <script type="application/json">
     {
       "postPromptUI": "postPromptUI",
       "clientConfig": {
@@ -2355,10 +2356,10 @@ limitations under the License.
       }
     }
   </script>
-  <div id="postPromptUI">
-    <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-  </div>
-</amp-consent></div>
+      <div id="postPromptUI">
+        <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
+      </div>
+    </amp-consent></div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
@@ -2530,7 +2531,9 @@ limitations under the License.
   <footer class="ampstart-footer flex flex-column items-center px3 ">
 
 
-    <small>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
