--- a/2025.html
+++ b/2025.html
@@ -27,8 +27,8 @@ limitations under the License.
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-<meta name="amp-consent-blocking" content="amp-ad">
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
@@ -2333,7 +2333,7 @@ limitations under the License.
 </head>
 
 <body>
-   <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+  <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
       <script type="application/json">
           {
             "postPromptUI": "postPromptUI",
@@ -2342,7 +2342,8 @@ limitations under the License.
               "params": ""
             }
           }
-        </script></div> 
+        </script>
+  </div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
@@ -2514,7 +2515,9 @@ limitations under the License.
   <footer class="ampstart-footer flex flex-column items-center px3 ">
 
 
-    <small>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
