--- a/cardinalsrams.html
+++ b/cardinalsrams.html
@@ -2335,9 +2335,9 @@ limitations under the License.
 </head>
 
 <body>
-<div>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
+  <div>
+    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+      <script type="application/json">
         {
           "postPromptUI": "postPromptUI",
           "clientConfig": {
@@ -2346,7 +2346,7 @@ limitations under the License.
           }
         }
       </script>
-</div>
+  </div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
@@ -2547,7 +2547,9 @@ limitations under the License.
   <footer class="ampstart-footer flex flex-column items-center px3 ">
 
 
-    <small>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
