--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ limitations under the License.
   <meta name="viewport" content="width=device-width" />
   <meta name="description"
     content="MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
-    <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-    <meta name="amp-consent-blocking" content="amp-ad">
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
 
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="keywords"
@@ -1551,7 +1551,7 @@ limitations under the License.
     body {
       line-height: 1.6;
       letter-spacing: normal;
-      font-size:large;
+      font-size: large;
     }
 
     .ampstart-subtitle {
@@ -3486,10 +3486,10 @@ limitations under the License.
           <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none block"
             style="font-size:2rem;">Travel</a>
         </li>
-                <li class="ampstart-nav-item">
-                  <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none block"
-                    style="font-size:2rem;">Fashion</a>
-                </li>
+        <li class="ampstart-nav-item">
+          <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none block"
+            style="font-size:2rem;">Fashion</a>
+        </li>
 
         <li class="ampstart-nav-item">
           <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none block"
@@ -3652,7 +3652,8 @@ limitations under the License.
         <a class="text-decoration-none" href="index.html">Minnowspace</a>
       </h1>
       <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 px2 mb3">
-      <h2 style="margin:20vw">Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.</h2>
+      <h2 style="margin:20vw">Minnowspace is a place where we can all come together to share our stories, experiences,
+        and ideas.</h2>
       </p>
 
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
@@ -3989,7 +3990,9 @@ limitations under the License.
 
       </ul>
     </nav>
-    <small>
+    <div id="postPromptUI">
+      <!-- Content for your post-consent UI -->
+    </div> <small>
       © Minnowspace 2024 - •
       <a class="text-decoration-none" href="index.html">Terms &amp; Conditions. Site contains affiliate links</a>
     </small>
