--- a/drones.html
+++ b/drones.html
@@ -2474,7 +2474,7 @@ limitations under the License.
     <amp-youtube data-videoid="KCJbIbySmk4" layout="responsive" width="480" height="270"></amp-youtube>
 
     <a href="https://amzn.to/3BC6FMF" target="_blank"
-      style="background-image:url(./img/drones/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem; color:aliceblue">
+      style="background-color:blue; background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem; color:aliceblue">
       Click Here For Amazing drones on Amazon!
     </a>
     <br>
