--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3816,10 +3816,11 @@ limitations under the License.
     </div>
     <amp-position-observer on="scroll:subscribeBGParallax.seekTo(percent=event.percent)" layout="nodisplay">
     </amp-position-observer>
-    <amp-img alt="A view of the sea, see?" class="land-see-subscribe-bg cover" layout="fixed-height" height="679"
-      src="./img/land-see/content/khatam-tadayon-107740.webp">
+    <amp-img alt="A view of the sea, see?" class="land-see-subscribe-bg cover" layout="fixed-height" height="479"
+      src="./img/main/pexels-babydov-7787761.jpg">
     </amp-img>
   </div>
+  
 
   <!-- Start Footer -->
   <footer class="ampstart-footer flex flex-column items-center mx-auto max-width-3">
