--- a/fengshui2025.html
+++ b/fengshui2025.html
@@ -2446,6 +2446,34 @@ limitations under the License.
       </p>
 
       <p class="mb1">
+        Easy Feng Shui using the Lo Shu pattern to help you showcase your "stuff" and arrange it in a VERY cool way. People talk
+        a lot about decluttering and minimalism, but the honest truth is that we simply have stuff. We're going to have stuff.
+        It is expensive to replace stuff and you can't always throw it away. I"m not going to tell you how to arrange your bed.
+        Do you have a New Year's Resolution to declutter and organize? Try arranging using the Lo Shu square and turn your chaos
+        into perfect, and I mean perfect symmetry.
+      </p>
+          <p class="mb1">
+        OK so the Lo Shu Square uses this pattern, if you notice each column and row adds up to 15, even the diagonals. Its like
+        tic-tac-toe, except every time you win (or at least tie !)
+        <br>
+        4,9,2
+        <br>
+        3,5,7
+        <br>
+        8,1,6
+        <br>
+        </p>
+      <p class="mb1">
+        So I use the general proportions to keep my place symmetrical. It really works great! Do i have 45 shirts I need to
+        organize? Why Yes I do! Try to arrange them in groups of 1 through 9 (based on your criteria, maybe its by color) and
+        then lay them out according to the grid. Oh wow now they are super organized? 15 in each row and column? Yes! You have
+        to see it to believe it. Do i have 45 random things in my house that need a place to live? um why Yes I do!? Great, use
+        this system. Just try to get the proportions roughly the same. </p><p class="mb1">You can zoom out and look at the whole house, arrange
+        rooms by furniture (maybe an end table counts as your 1 and the sofa counts as your 9) OR you can focus on a small area
+        like a desk to arrange your computer and notepad situation. It works great. I have used this at work to create beautiful
+        show rooms where customers didn't get overwhelmed with the layout but were free to walk through the store, and I knew
+        they would see a great selection of items regardless of how they chose to walk across the store. It also creates natural
+        separation and keeps things in harmony.
         Traditional Elements and the 2025 Flying Star Map
         In Feng Shui, the natural elements of wood, fire, earth, metal, and water are associated with specific
         directions,
