--- a/fengshui2025.html
+++ b/fengshui2025.html
@@ -2360,7 +2360,14 @@ limitations under the License.
     <script type="application/json">
       {
         "vars": {
-          "account": "G-V3TNNSX3H4"
+          "account": "G-V3TNNSX3H4",
+          "gtag_id": "GTM-5VTXDGGN",
+      "config" : {
+          "	GTM-5VTXDGGN": {
+              "groups": "default",
+        "allow_ad_personalization_signals": [true|false]
+          }
+        }
         },
         "triggers": {
           "trackPageview": {
