--- a/index.html
+++ b/index.html
@@ -3374,7 +3374,7 @@ limitations under the License.
       <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
     </div>
   </amp-consent>
-  <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+  <!-- <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
    window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
@@ -3386,6 +3386,7 @@ limitations under the License.
 
 </script>
   </amp-script>
+  -
   <!--maybe delete above-->
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
